# baish

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
docs/: index.md  testing.md
src/baish/: __version__.py  cli.py  config.py  content_processor.py  file_analyzer.py  llm.py  logger.py  main.py  results_manager.py  script_analyzer.py  storage.py  token_counter.py  yara_checker.py
src/baish/prompts/: security.py  security_map_reduce.py
src/baish/yara/: instruction_bypass.yar
tests/e2e/: Dockerfile.test  __init__.py  test_groq.py  test_ollama.py  test_openai.py
tests/fixtures/: cat.sh  keysearch.sh  prompt-injection-simple.sh  secret-upload.sh
tests/unittests/: test_baish.py  test_cli.py  test_config.py  test_content_processor.py  test_dead_code.py  test_file_type_analyzer.py  test_llm.py  test_logger.py  test_main.py  test_results_manager.py  test_script_analyzer.py  test_storage.py  test_yara.py
